syntax = "proto3";

package ShopServer;

option go_package = "./ShopServer";

message CreateShopReq{
    string Account = 1;
}

message CreateShopResp{
    int64 Code = 1;
    string Msg = 2;
}